test/Fail/Issue7158.err
Issue7158.agda:21.8-11: error: [CannotApply]
Expression used as function but does not have function type:
  expr: foo
  type: T
when checking that zero is a valid argument to a function of type T
